--- a/src/css/purestyles.css
+++ b/src/css/purestyles.css
@@ -5789,6 +5789,7 @@ body {
   color: #333;
   text-align: left;
   font-size: 1rem;
+  background: #eff1f5;
 }
 
 h1 {
@@ -5816,7 +5817,7 @@ ol.linenums {
 pre.prettyprint {
   width: 100%;
   border-left: 5px solid #007f7f !important;
-  background: #eef0f2;
+  background: #eff1f5;
   padding-top: 1rem !important;
   padding-bottom: 1rem !important;
 }
@@ -5853,7 +5854,7 @@ pre.prettyprint {
 /*
 .syntax {
   padding: 1rem;
-  background: #e6ffff;
+  background: #eff1f5;
   border-left: 5px solid #007f7f;
 }
 */
@@ -5861,9 +5862,10 @@ pre.prettyprint {
 code.syntax {
   display: block;
   padding: 1rem;
-  background: #e6ffff;
+  background: #eff1f5;
   border-left: 5px solid #007f7f;
   margin-bottom: 1rem;
+  -webkit-border-radius: 0;
   border-radius: 0;
   color: #212529;
 }
@@ -5885,8 +5887,10 @@ button#return-to-top {
   background-color: rgba(0,127,127,.8);
   width: 48px;
   height: 48px;
+  -webkit-border-radius: 50%;
   border-radius: 50%;
   -webkit-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
   z-index: 2;
 }
@@ -5903,28 +5907,50 @@ button#return-to-top i {
 /* HEADER */
 
 header {
-  background: #fafaff;
+  background: #fff;
 }
 
 #tagline {
   font-family: 'Audiowide', cursive;
 }
 
-header .nav-link {
-  letter-spacing: 1px;
+.nav-link {
+  letter-spacing: 2px;
 }
 
 .dropdown-menu {
   z-index: 1021;
 }
 
-.navbar-brand,.navbar-nav {
-  position: relative;
-  top: 10px;
-  padding: 0;
+/* MAIN CONTENT */
+
+main {
+  background: #fff;
+  -webkit-box-shadow: 0 0.4rem 0.8rem -0.1rem rgba(0,32,128,.1), 0 0 0 1px #f0f2f7;
+  box-shadow: 0 0.4rem 0.8rem -0.1rem rgba(0,32,128,.1), 0 0 0 1px #f0f2f7;
 }
 
-/* MAIN CONTENT */
+.jumbotron {
+  background: #eff1f5;
+  -webkit-box-shadow: 0 0.4rem 0.8rem -0.1rem rgba(0,32,128,.1), 0 0 0 1px #f0f2f7;
+  box-shadow: 0 0.4rem 0.8rem -0.1rem rgba(0,32,128,.1), 0 0 0 1px #f0f2f7;
+}
+
+.jumbotron-1,.jumbotron-5 {
+  background: #f06529;
+}
+
+.jumbotron-2 {
+  background: #2965f1;
+}
+
+.jumbotron-3 {
+  background: #f7df1e;
+}
+
+.jumbotron-4 {
+  background: #7acef4;
+}
 
 main section:first-of-type {
   margin-top: 1rem !important;
@@ -5982,7 +6008,7 @@ div.content-card {
 }
 
 div.content-card .card-header {
-  background: #eef0f2;
+  background: #eff1f5;
 }
 
 div.content-card .card-body li,div.content-card .card-body a {
@@ -6075,8 +6101,12 @@ section {
   }
 
   header {
-    -webkit-box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+    -webkit-box-shadow: 0 0.25rem 0.5rem -0.1rem rgba(0,32,128,.2);
+    box-shadow: 0 0.25rem 0.5rem -0.1rem rgba(0,32,128,.2);
+  }
+
+  .navbar-brand {
+    padding-bottom: 0;
   }
 
   /* SIDEBAR */
@@ -6121,6 +6151,10 @@ section {
 
   .navbar-brand {
     margin-right: 0;
+  }
+
+  .nav-link {
+    padding: 0;
   }
 
   .more-btn {
